libs/parser/testdata/errors/inline_ref_malformed.csl
source:
	alias: 'network'
	type: 'folder'
	path: './config'

infrastructure:
	# Missing path after alias
	bad_ref: reference:network:
